implement Nostr video creation and viewing

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -127,7 +127,8 @@
     "viem": "2.x",
     "wagmi": "^2.12.8",
     "zustand": "^4.5.2",
-    "@stripe/stripe-react-native":"0.38.6"
+    "@stripe/stripe-react-native":"0.38.6",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
