--- a/packages/pixel_ui/package.json
+++ b/packages/pixel_ui/package.json
@@ -19,7 +19,8 @@
     "starknet": "^6.9.0",
     "@argent/x-sessions": "^6.7.4",
     "@argent/x-shared": "^1.32.1",
-    "starknetkit-next": "npm:starknetkit@2.3.0"
+    "starknetkit-next": "npm:starknetkit@2.3.0",
+    "common": "workspace:*"
   },
   "scripts": {
     "start": "react-scripts start",
