--- a/packages/pixel_ui/tsconfig.json
+++ b/packages/pixel_ui/tsconfig.json
@@ -18,6 +18,12 @@
     "declaration": true,
     "sourceMap": true,
     "noImplicitAny": false,
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ],
+      "common": ["../common/src"]
+    },
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"],
