--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -31,3 +31,9 @@ EXPO_PUBLIC_EKUBO_ROUTE_API="https://quoter-mainnet-api.ekubo.org"
 
 # AVNU API
 EXPO_PUBLIC_AVNU_API="https://starknet.api.avnu.fi"
+
+#PINATA
+EXPO_PUBLIC_PINATA_JWT=""
+EXPO_PUBLIC_PINATA_UPLOAD_GATEWAY_URL=''
+EXPO_PUBLIC_PINATA_PINATA_SIGN_URL='https://api.pinata.cloud/v3/files/sign'
+EXPO_PUBLIC_PINATA_UPLOAD_URL='https://uploads.pinata.cloud/v3/files'
