start env docker indexer + fix build

--- a/backend/indexer/Dockerfile.prod
+++ b/backend/indexer/Dockerfile.prod
@@ -3,5 +3,27 @@ FROM quay.io/apibara/sink-webhook:0.6.0 as sink-webhook
 WORKDIR /indexer
 COPY ./indexer/prod-script.js .
 
+
+
+ARG ART_PEACE_CONTRACT_ADDRESS
+
+ENV ART_PEACE_CONTRACT_ADDRESS=${ART_PEACE_CONTRACT_ADDRESS}
+
+ARG PERSIST_TO_REDIS
+
+ENV PERSIST_TO_REDIS=${PERSIST_TO_REDIS}
+
+ARG APIBARA_STREAM_URL
+
+ENV APIBARA_STREAM_URL=${APIBARA_STREAM_URL}
+
+ARG CONSUMER_TARGET_URL
+
+ENV CONSUMER_TARGET_URL=${CONSUMER_TARGET_URL}
+
+ARG INDEXER_ID
+
+ENV INDEXER_ID=${INDEXER_ID}
+
 # TODO: Allow net only on the required domains
 CMD ["run", "prod-script.js", "--allow-env-from-env", "CONSUMER_TARGET_URL,APIBARA_STREAM_URL,PERSIST_TO_REDIS,INDEXER_ID,ART_PEACE_CONTRACT_ADDRESS,NFT_CONTRACT_ADDRESS,USERNAME_STORE_ADDRESS", "--allow-net", "--sink-id", "art-peace-sink-id"]
