init onramp money iframe

--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -37,3 +37,8 @@ EXPO_PUBLIC_PINATA_JWT=""
 EXPO_PUBLIC_PINATA_UPLOAD_GATEWAY_URL=''
 EXPO_PUBLIC_PINATA_PINATA_SIGN_URL='https://api.pinata.cloud/v3/files/sign'
 EXPO_PUBLIC_PINATA_UPLOAD_URL='https://uploads.pinata.cloud/v3/files'
+
+# Onramp/Offramp
+
+EXPO_PUBLIC_APP_ID_ONRAMP_MONEY=
+
