--- a/turbo.json
+++ b/turbo.json
@@ -41,7 +41,8 @@
     "EXPO_PUBLIC_GOOGLE_TAG_ID",
     "EXPO_PUBLIC_MERCHANT_ID_APPLE",
     "STRIPE_SERVER_API_KEY",
-    "NEXT_PUBLIC_GOOGLE_ANALYTICS"
+    "NEXT_PUBLIC_GOOGLE_ANALYTICS",
+    "EXPO_PUBLIC_APP_ID_ONRAMP_MONEY"
 
   ],
   "pipeline": {
