--- a/backend/indexer/Dockerfile.railway
+++ b/backend/indexer/Dockerfile.railway
@@ -1,6 +1,6 @@
 FROM quay.io/apibara/sink-webhook:0.6.0
 
-WORKDIR /app
-COPY ./indexer/script.js /app
+WORKDIR /indexer
+COPY ./indexer/script.js .
 
 ENTRYPOINT ["/nix/store/2l9p053ypiyh4i1r0b82ml4f1x0fy0sp-apibara-sink-webhook-0.6.0/bin/apibara-sink-webhook"]
