username deploy + add artpeace old test to fix + vars in canvas

--- a/turbo.json
+++ b/turbo.json
@@ -25,6 +25,7 @@
     "NEXT_PUBLIC_NODE_ENV",
     "NEXT_PUBLIC_CANVAS_NFT_CONTRACT_ADDRESS",
     "NEXT_PUBLIC_CANVAS_STARKNET_CONTRACT_ADDRESS",
+    "NEXT_PUBLIC_USERNAME_STORE_CONTRACT_ADDRESS",
     "NEXT_PUBLIC_CHAIN_ID",
     "NEXT_PUBLIC_PROVIDER_URL",
     "EXPO_PUBLIC_INDEXER_BACKEND_URL",
