Feat/move forward (#195)
* init onramp money iframe

* delete engine

* go

* add in backend + block script

* go fix backend

* username deploy + add artpeace old test to fix + vars in canvas

* vars

* lint fix

* disable root lint fix

* clean

--- a/turbo.json
+++ b/turbo.json
@@ -25,6 +25,7 @@
     "NEXT_PUBLIC_NODE_ENV",
     "NEXT_PUBLIC_CANVAS_NFT_CONTRACT_ADDRESS",
     "NEXT_PUBLIC_CANVAS_STARKNET_CONTRACT_ADDRESS",
+    "NEXT_PUBLIC_USERNAME_STORE_CONTRACT_ADDRESS",
     "NEXT_PUBLIC_CHAIN_ID",
     "NEXT_PUBLIC_PROVIDER_URL",
     "EXPO_PUBLIC_INDEXER_BACKEND_URL",
@@ -41,7 +42,8 @@
     "EXPO_PUBLIC_GOOGLE_TAG_ID",
     "EXPO_PUBLIC_MERCHANT_ID_APPLE",
     "STRIPE_SERVER_API_KEY",
-    "NEXT_PUBLIC_GOOGLE_ANALYTICS"
+    "NEXT_PUBLIC_GOOGLE_ANALYTICS",
+    "EXPO_PUBLIC_APP_ID_ONRAMP_MONEY"
 
   ],
   "pipeline": {
