--- a/docs/package.json
+++ b/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-website",
+  "name": "afk-docs",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -40,8 +40,5 @@
       "last 3 firefox version",
       "last 5 safari version"
     ]
-  },
-  "engines": {
-    "node": ">=18.0"
   }
 }
