fix: fix data-backend

--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -1,11 +1,11 @@
 TELEGRAM_WEB_APP="https://tg.afk-community.xyz"
 
-INDEXER_DATABASE_URL="postgresql://postgres"
-TELEGRAM_BOT_TOKEN=TG_BOT_FATHER
+INDEXER_DATABASE_URL="postgresql://postgres:postgres@localhost:5434/indexer"
+TELEGRAM_BOT_TOKEN="TG_BOT_FATHER"
 TG_ADMIN_CHAT_ID=
 WEBHOOK_DOMAIN="https://data-backend.xyz"
 
-BACKEND_DATABASE_URL=
+BACKEND_DATABASE_URL="postgresql://postgres:postgres@localhost:5433/data-backend"
 APP_URL_WEB="http://localhost:8081"
 
 FUNKIT_API_KEY=
