--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "build:index": "tsc",
     "build:all_repo": "pnpm run build:indexer-prisma && cd ../../apps/data-backend tsc",
-    "build:all": "pnpm run build:indexer-prisma && cd ../../apps/data-backend && pnpm prisma:setup && tsc",
+    "build:all": "pnpm run prisma:setup && tsc",
     "start": "ts-node src/index.ts",
     "start:dev": "ts-node-dev src/index.ts",
     "start:prod": "ts-node dist/index.js",
@@ -41,6 +41,7 @@
     "nodemailer": "^6.9.15",
     "pg": "^8.12.0",
     "pg-promise": "^11.9.1",
+    "stripe": "^17.2.1",
     "telegraf": "^4.16.3",
     "twilio": "^5.3.3",
     "typescript": "^5.5.4"
