--- a/apps/indexer/.env.example
+++ b/apps/indexer/.env.example
@@ -1,9 +1,9 @@
 AUTH_TOKEN=dna_xxx
-POSTGRES_CONNECTION_STRING=postgresql://admin:postgres@localhost:5432/indexer
+POSTGRES_CONNECTION_STRING=postgresql://postgres:postgres@localhost:5433/indexer
 PGAPPNAME=afk-indexer
 PGDATABASE=indexer
 PGHOST=localhost
 PGOPTIONS=
 PGPASSWORD=postgres
-PGPORT=5432
-PGUSER=admin
+PGPORT=5433
+PGUSER=postgres
