fix: add env variables to railway Dockerfile

--- a/backend/Dockerfile.railway
+++ b/backend/Dockerfile.railway
@@ -11,6 +11,14 @@ COPY /go.mod /go.sum ./
 RUN go mod download
 COPY ./ .
 
+ENV REDIS_HOST=${REDIS_HOST}
+ENV REDIS_PORT=${REDIS_PORT}
+ENV POSTGRES_HOST=${POSTGRES_HOST}
+ENV POSTGRES_PORT=${POSTGRES_PORT}
+ENV POSTGRES_USER=${POSTGRES_USER}
+ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+ENV POSTGRES_DATABASE=${POSTGRES_DATABASE}
+
 RUN go build -o consumer ./cmd/consumer/consumer.go
 
 EXPOSE 5050
