--- a/backend/Dockerfile.cosumer.railway
+++ b/backend/Dockerfile.cosumer.railway
@@ -1,4 +1,4 @@
-FROM golang:1.22.2-alpine
+FROM --platform=linux/amd64 golang:1.22.2-alpine
 
 RUN apk add --no-cache bash curl git jq
 
@@ -10,14 +10,6 @@ WORKDIR /app
 COPY /go.mod /go.sum ./
 RUN go mod download
 COPY ./ .
-
-ENV REDIS_HOST=${REDIS_HOST}
-ENV REDIS_PORT=${REDIS_PORT}
-ENV POSTGRES_HOST=${POSTGRES_HOST}
-ENV POSTGRES_PORT=${POSTGRES_PORT}
-ENV POSTGRES_USER=${POSTGRES_USER}
-ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-ENV POSTGRES_DATABASE=${POSTGRES_DATABASE}
 
 RUN go build -o consumer ./cmd/consumer/consumer.go
 
