--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -60,6 +60,7 @@
     "@starknet-react/core": "^2.8.2",
     "@starknet-wc/core": "0.0.4",
     "@starknet-wc/react": "0.0.4",
+    "@stripe/stripe-react-native": "0.38.6",
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-query-persist-client": "5.40.0",
     "@uniswap/sdk-core": "^5.3.1",
@@ -72,7 +73,7 @@
     "common": "workspace:*",
     "crypto-es": "^2.1.0",
     "events": "^3.3.0",
-    "expo": "~51.0.28",
+    "expo": "~51.0.38",
     "expo-application": "^5.9.1",
     "expo-auth-session": "^5.5.2",
     "expo-av": "~14.0.7",
@@ -110,7 +111,7 @@
     "react-native-pager-view": "6.3.0",
     "react-native-passkey": "2.1.1",
     "react-native-portalize": "^1.0.7",
-    "react-native-qrcode-svg": "^6.3.1",
+    "react-native-qrcode-svg": "^6.3.12",
     "react-native-reanimated": "~3.10.1",
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.10.1",
@@ -125,9 +126,9 @@
     "starknetkit": "^1.1.9",
     "text-encoding": "^0.7.0",
     "viem": "2.x",
+    "vision-camera-code-scanner": "^0.2.0",
     "wagmi": "^2.12.8",
-    "zustand": "^4.5.2",
-    "@stripe/stripe-react-native":"0.38.6"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
