--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -1,10 +1,8 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "target": "ESNext",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "lib": ["dom", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -27,29 +25,11 @@
     "jsx": "react-native",
     "module": "ES6",
     "paths": {
-      "afk_nostr_sdk": [
-        "../../packages/afk_nostr_sdk/src"
-      ],
-      "common": [
-        "../../packages/common/src"
-      ],
-      "pixel_ui": [
-        "../../packages/pixel_ui/src"
-      ]
-    }
+      "afk_nostr_sdk": ["../../packages/afk_nostr_sdk/src"],
+      "common": ["../../packages/common/src"],
+      "pixel_ui": ["../../packages/pixel_ui/src"],
+    },
   },
-  "exclude": [
-    "node_modules",
-    "dist",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js"
-  ],
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.js",
-    "**/*.jsx"
-  ],
-  "extends": "expo/tsconfig.base"
+  "exclude": ["node_modules", "dist", "babel.config.js", "metro.config.js", "jest.config.js"],
+  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
 }
