--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -118,6 +118,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vision-camera": "^4.5.3",
     "react-native-web": "~0.19.6",
     "react-native-webview": "~13.6.4",
     "react-native-webview-crypto": "^0.0.25",
