--- a/turbo.json
+++ b/turbo.json
@@ -43,7 +43,8 @@
     "EXPO_PUBLIC_MERCHANT_ID_APPLE",
     "STRIPE_SERVER_API_KEY",
     "NEXT_PUBLIC_GOOGLE_ANALYTICS",
-    "EXPO_PUBLIC_APP_ID_ONRAMP_MONEY"
+    "EXPO_PUBLIC_APP_ID_ONRAMP_MONEY",
+    "NEXT_PUBLIC_DYNAMIC_API_KEY"
 
   ],
   "pipeline": {
