--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "target": "ESNext",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -24,14 +20,9 @@
     "module": "ES2015",
     "declaration": true,
     "sourceMap": true,
-    "baseUrl": "./"
+    "baseUrl": "./",
+  
   },
-  "include": [
-    "./packages/**/*",
-    "./apps/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ],
-  "extends": "expo/tsconfig.base"
+  "include": ["./packages/**/*", "./apps/**/*"],
+  "exclude": ["node_modules"]
 }
