--- a/turbo.json
+++ b/turbo.json
@@ -44,7 +44,9 @@
     "STRIPE_SERVER_API_KEY",
     "NEXT_PUBLIC_GOOGLE_ANALYTICS",
     "EXPO_PUBLIC_APP_ID_ONRAMP_MONEY",
-    "NEXT_PUBLIC_DYNAMIC_API_KEY"
+    "NEXT_PUBLIC_DYNAMIC_API_KEY",
+    "NEXT_PUBLIC_ACCOUNT_ADDRESS",
+    "BACKEND_DATABASE_URL"
 
   ],
   "pipeline": {
