--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -4,7 +4,9 @@ FROM node:18-alpine AS base
 # Set the working directory inside the container
 WORKDIR /app
 
-ENV NODE_ENV=production
+ARG INDEXER_DATABASE_URL
+
+RUN echo $INDEXER_DATABASE_URL
 
 # Copy root-level package files
 COPY package.json pnpm-workspace.yaml ./
