feat: add install script to indexer-prisma

--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -46,6 +46,8 @@ RUN pnpm install --force
 # Copy the entire repository into the Docker container
 COPY . .
 
+RUN pnpm install --filter indexer-prisma
+
 # Build the indexer-prisma package
 RUN pnpm --filter indexer-prisma build
 
