--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -47,6 +47,7 @@ RUN pnpm install --force
 COPY . .
 
 # Build the indexer-prisma package
+RUN pnpm --filter indexer-prisma install
 RUN pnpm --filter indexer-prisma build
 
 # Build the data-backend package
