feat: minor change

--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -45,9 +45,9 @@ RUN pnpm install --force
 
 # Copy the entire repository into the Docker container
 COPY . .
+COPY ./node_modules .
 
 # Build the indexer-prisma package
-RUN pnpm --filter indexer-prisma install
 RUN pnpm --filter indexer-prisma build
 
 # Build the data-backend package
