feat: minor change

--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -47,7 +47,7 @@ RUN pnpm install --force
 COPY . .
 
 # Build the indexer-prisma package
-RUN pnpm --filter indexer-prisma build
+# RUN pnpm --filter indexer-prisma build
 
 # Build the data-backend package
 RUN pnpm --filter data-backend build:all
