--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -45,9 +45,10 @@ RUN pnpm install --force
 
 # Copy the entire repository into the Docker container
 COPY . .
+COPY --from=base /app/node_modules ./node_modules
 
 # Build the indexer-prisma package
-# RUN pnpm --filter indexer-prisma build
+RUN pnpm --filter indexer-prisma build
 
 # Build the data-backend package
 RUN pnpm --filter data-backend build:all
