--- a/backend/Dockerfile.consumer.railway
+++ b/backend/Dockerfile.consumer.railway
@@ -46,6 +46,20 @@ RUN echo ${BACKEND_HOST}
 RUN echo ${CONSUMER_PORT}
 RUN echo ${PRODUCTION}
 
+# Create .env file with environment variables
+RUN echo "REDIS_HOST=${REDIS_HOST}" >> .env && \
+    echo "REDIS_PORT=${REDIS_PORT}" >> .env && \
+    echo "POSTGRES_HOST=${POSTGRES_HOST}" >> .env && \
+    echo "POSTGRES_PORT=${POSTGRES_PORT}" >> .env && \
+    echo "POSTGRES_USER=${POSTGRES_USER}" >> .env && \
+    echo "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}" >> .env && \
+    echo "POSTGRES_DATABASE=${POSTGRES_DATABASE}" >> .env && \
+    echo "BACKEND_URL=${BACKEND_URL}" >> .env && \
+    echo "BACKEND_PORT=${BACKEND_PORT}" >> .env && \
+    echo "BACKEND_HOST=${BACKEND_HOST}" >> .env && \
+    echo "CONSUMER_PORT=${CONSUMER_PORT}" >> .env && \
+    echo "PRODUCTION=${PRODUCTION}" >> .env
+
 
 RUN go build -o consumer ./cmd/consumer/consumer.go
 
