--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -5,8 +5,7 @@
   "packageManager": "pnpm@8.15.9",
   "scripts": {
     "dev": "expo start",
-    "build:web": "npx expo export --platform web",
-    "build2:web": "npx expo export --platform web && npx workbox-cli generateSW workbox-config.js",
+    "build:web": "npx expo export --platform web && workbox generateSW workbox-config.js",
     "start": "expo start",
     "start:tunnel": "expo start --tunnel",
     "android": "expo run:android",
@@ -46,7 +45,7 @@
     "@nostr-dev-kit/ndk": "2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -61,7 +60,7 @@
     "@starknet-react/core": "^2.8.2",
     "@starknet-wc/core": "0.0.4",
     "@starknet-wc/react": "0.0.4",
-    "@stripe/stripe-react-native": "0.38.6",
+    "@stripe/stripe-react-native": "0.37.2",
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-query-persist-client": "5.40.0",
     "@uniswap/sdk-core": "^5.3.1",
@@ -101,9 +100,9 @@
     "npx": "^10.2.2",
     "path": "^0.12.7",
     "pbkdf2": "^3.1.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.74.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "2.16.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^8.2.0",
@@ -115,13 +114,13 @@
     "react-native-qrcode-svg": "^6.3.12",
     "react-native-reanimated": "~3.10.1",
     "react-native-redash": "^18.1.3",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vision-camera": "^4.5.3",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "~13.6.4",
+    "react-native-webview": "~13.8.6",
     "react-native-webview-crypto": "^0.0.25",
     "starknet": "6.9.0",
     "starknetkit": "^1.1.9",
@@ -134,7 +133,7 @@
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/pbkdf2": "^3.1.2",
-    "@types/react": "~18.3.1",
+    "@types/react": "~18.2.79",
     "@uniswap/eslint-config": "^1.2.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
