feat: added basic streaming backend with ffmpeg socket, frontend with socket too

--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -25,15 +25,19 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/static": "7.0.4",
     "@funkit/api-base": "^1.2.0",
     "@prisma/client": "^5.18.0",
     "@telegraf/types": "^7.1.0",
     "apollo-server": "^3.13.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "fastify-plugin": "^4.5.1",
+    "fastify-socket.io": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "graphql": "^16.9.0",
     "helmet": "^7.1.0",
     "indexer-prisma": "workspace:*",
@@ -41,6 +45,7 @@
     "nodemailer": "^6.9.15",
     "pg": "^8.12.0",
     "pg-promise": "^11.9.1",
+    "socket.io": "^4.8.0",
     "stripe": "^17.2.1",
     "telegraf": "^4.16.3",
     "twilio": "^5.3.3",
