--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -60,6 +60,7 @@
     "@starknet-react/core": "^2.8.2",
     "@starknet-wc/core": "0.0.4",
     "@starknet-wc/react": "0.0.4",
+    "@stripe/stripe-react-native": "0.38.6",
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-query-persist-client": "5.40.0",
     "@uniswap/sdk-core": "^5.3.1",
@@ -119,6 +120,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vision-camera": "^4.5.3",
     "react-native-web": "~0.19.6",
+    "react-native-webrtc": "^124.0.4",
     "react-native-webview": "~13.6.4",
     "react-native-webview-crypto": "^0.0.25",
     "starknet": "6.9.0",
@@ -126,8 +128,7 @@
     "text-encoding": "^0.7.0",
     "viem": "2.x",
     "wagmi": "^2.12.8",
-    "zustand": "^4.5.2",
-    "@stripe/stripe-react-native":"0.38.6"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
