fix: added cloudinary example env for fastify backend

--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -12,3 +12,8 @@ FUNKIT_API_KEY=
 
 JWT_SECRET=
 STRIPE_SERVER_API_KEY=
+
+# CLOUDINARY 
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
