--- a/turbo.json
+++ b/turbo.json
@@ -47,7 +47,10 @@
     "NEXT_PUBLIC_DYNAMIC_API_KEY",
     "NEXT_PUBLIC_DYNAMIC_ENV_ID",
     "NEXT_PUBLIC_ACCOUNT_ADDRESS",
-    "BACKEND_DATABASE_URL"
+    "BACKEND_DATABASE_URL",
+    "CLOUDINARY_CLOUD_NAME",
+    "CLOUDINARY_API_KEY",
+    "CLOUDINARY_API_SECRET"
 
   ],
   "pipeline": {
