--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@8.15.9",
   "scripts": {
     "dev": "expo start",
-    "build:web": "npx expo export --platform web",
+    "build:web": "npx expo export --platform web && workbox generateSW workbox-config.js",
     "start": "expo start",
     "start:tunnel": "expo start --tunnel",
     "android": "expo run:android",
