--- a/turbo.json
+++ b/turbo.json
@@ -43,7 +43,14 @@
     "EXPO_PUBLIC_MERCHANT_ID_APPLE",
     "STRIPE_SERVER_API_KEY",
     "NEXT_PUBLIC_GOOGLE_ANALYTICS",
-    "EXPO_PUBLIC_APP_ID_ONRAMP_MONEY"
+    "EXPO_PUBLIC_APP_ID_ONRAMP_MONEY",
+    "NEXT_PUBLIC_DYNAMIC_API_KEY",
+    "NEXT_PUBLIC_DYNAMIC_ENV_ID",
+    "NEXT_PUBLIC_ACCOUNT_ADDRESS",
+    "BACKEND_DATABASE_URL",
+    "CLOUDINARY_CLOUD_NAME",
+    "CLOUDINARY_API_KEY",
+    "CLOUDINARY_API_SECRET"
 
   ],
   "pipeline": {
