--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -15,10 +15,17 @@
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@argent/x-sessions": "^6.7.4",
     "@avnu/avnu-sdk": "^2.0.0",
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/theme-tools": "^2.1.2",
+    "@dynamic-labs/bitcoin": "^3.4.4",
+    "@dynamic-labs/ethereum": "^3.4.4",
+    "@dynamic-labs/sdk-react-core": "^3.4.4",
+    "@dynamic-labs/starknet": "^3.4.4",
+    "@dynamic-labs/wagmi-connector": "^3.4.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@nostr-dev-kit/ndk": "2.10.1",
@@ -30,6 +37,7 @@
     "@starknet-wc/core": "0.0.4",
     "@starknet-wc/react": "0.0.4",
     "@tanstack/react-query": "^5.40.0",
+    "axios": "^1.7.2",
     "common": "workspace:*",
     "d3": "^7.9.0",
     "ethers": "^6.13.1",
@@ -45,13 +53,11 @@
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
     "starknet": "6.9.0",
+    "starknetkit-next": "npm:starknetkit@2.3.0",
     "viem": "~2.21.2",
     "wagmi": "^2.12.8",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2",
-    "starknetkit-next": "npm:starknetkit@2.3.0",
-    "@argent/x-sessions": "^6.7.4"
-
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
