--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -22,3 +22,7 @@ CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
 
+# Starknet
+STARKNET_RPC_PROVIDER_URL=""
+STARKNET_RPC_NETWORK="SN_SEPOLIA"  # SN_SEPOLIA, SN_MAIN
+
