--- a/apps/mobile/vercel.json
+++ b/apps/mobile/vercel.json
@@ -7,7 +7,7 @@
     "rewrites": [
       {
         "source": "/:path*",
-        "destination": "/apps/mobile"
+        "destination": "/"
       }
     ]
   }
