feat: added starkent signer and creation of user account on the backend (#230)
* feat: added starkent signer and creation of user account on the backend

* fix: renamed file

* fix: cleanups

* fix: deps issue

--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -10,10 +10,19 @@ APP_URL_WEB="http://localhost:8081"
 
 FUNKIT_API_KEY=
 
+#JWT
 JWT_SECRET=
+ACCESS_TOKEN_EXPIRY="30m"
+REFRESH_TOKEN_EXPIRY="7d"
+
 STRIPE_SERVER_API_KEY=
 
 # CLOUDINARY 
 CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
+
+# Starknet
+STARKNET_RPC_PROVIDER_URL=""
+STARKNET_RPC_NETWORK="SN_SEPOLIA"  # SN_SEPOLIA, SN_MAIN
+
