try fix apps and build

--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -25,4 +25,5 @@ CLOUDINARY_API_SECRET=""
 # Starknet
 STARKNET_RPC_PROVIDER_URL=""
 STARKNET_RPC_NETWORK="SN_SEPOLIA"  # SN_SEPOLIA, SN_MAIN
-
+RPC_NODE_API_KEY=""
+SN_NETWORK="SN_SEPOLIA"
