fix args docker

--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -34,6 +34,57 @@ ARG STRIPE_SERVER_API_KEY
 # Set the environment variable
 RUN echo ${STRIPE_SERVER_API_KEY}
 
+ARG TELEGRAM_WEB_APP
+RUN echo ${TELEGRAM_WEB_APP}
+
+
+ARG CLOUDINARY_CLOUD_NAME
+RUN echo ${CLOUDINARY_CLOUD_NAME}
+
+ARG CLOUDINARY_API_KEY
+RUN echo ${CLOUDINARY_API_KEY}
+
+ARG CLOUDINARY_API_SECRET
+RUN echo ${CLOUDINARY_API_SECRET}
+
+# Twilio keys
+
+ARG TWILIO_ACCOUNT_SSID
+RUN echo ${TWILIO_ACCOUNT_SSID}
+
+ARG TWILIO_SERVICE_ID
+RUN echo ${TWILIO_SERVICE_ID}
+
+ARG TWILIO_AUTH_TOKEN
+RUN echo ${TWILIO_AUTH_TOKEN}
+
+
+ARG STARKNET_RPC_PROVIDER_URL
+RUN echo ${STARKNET_RPC_PROVIDER_URL}
+
+ARG STARKNET_RPC_NETWORK
+RUN echo ${STARKNET_RPC_NETWORK}
+
+ARG RPC_NODE_API_KEY
+RUN echo ${RPC_NODE_API_KEY}
+
+ARG SN_NETWORK
+RUN echo ${SN_NETWORK}
+
+
+ARG ACCOUNT_ADDRESS
+RUN echo ${ACCOUNT_ADDRESS}
+
+
+ARG ACCOUNT_PRIVATE_KEY
+RUN echo ${ACCOUNT_PRIVATE_KEY}
+
+
+
+ARG JWT_SECRET
+RUN echo ${JWT_SECRET}
+
+
 # Copy root-level package files
 COPY package.json pnpm-workspace.yaml ./
 
