--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -35,7 +35,7 @@
     "@dynamic-labs/client": "4.0.0-alpha.8",
     "@dynamic-labs/react-hooks": "4.0.0-alpha.8",
     "@dynamic-labs/react-native-extension": "4.0.0-alpha.8",
-    "@dynamic-labs/utils": "^3.3.0",
+    "@dynamic-labs/utils": "4.0.0-alpha.8",
     "@dynamic-labs/viem-extension": "4.0.0-alpha.8",
     "@expo/metro-runtime": "~3.2.1",
     "@getalby/bitcoin-connect-react": "^3.5.3",
@@ -45,7 +45,7 @@
     "@nostr-dev-kit/ndk": "2.10.1",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -72,7 +72,7 @@
     "common": "workspace:*",
     "crypto-es": "^2.1.0",
     "events": "^3.3.0",
-    "expo": "~51.0.28",
+    "expo": "~51.0.38",
     "expo-application": "^5.9.1",
     "expo-auth-session": "^5.5.2",
     "expo-av": "~14.0.7",
@@ -127,7 +127,7 @@
     "viem": "2.x",
     "wagmi": "^2.12.8",
     "zustand": "^4.5.2",
-    "@stripe/stripe-react-native":"0.38.6"
+    "@stripe/stripe-react-native": "0.37.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
