--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -15,6 +15,8 @@ ARG CLOUDINARY_API_KEY
 ARG CLOUDINARY_API_SECRET
 ARG STARKNET_RPC_PROVIDER_URl
 ARG STARKNET_RPC_NETWORK
+ARG SN_NETWORK
+ARG RPC_NODE_API_KEY
 ARG JWT_SECRET
 ARG ACCESS_TOKEN_EXPIRY
 ARG REFRESH_TOKEN_EXPIRY
@@ -28,6 +30,8 @@ RUN echo ${CLOUDINARY_CLOUD_NAME}
 RUN echo ${CLOUDINARY_API_KEY}
 RUN echo ${CLOUDINARY_API_SECRET}
 RUN echo ${STARKNET_RPC_PROVIDER_URl}
+RUN echo ${SN_NETWORK}
+RUN echo ${RPC_NODE_API_KEY}
 RUN echo ${JWT_SECRET}
 RUN echo ${ACCESS_TOKEN_EXPIRY}
 RUN echo ${REFRESH_TOKEN_EXPIRY}
