--- a/apps/pwa/tsconfig.json
+++ b/apps/pwa/tsconfig.json
@@ -29,8 +29,12 @@
       "@/*": [
         "./src/*"
       ],
-      "pixel_ui": ["../../packages/pixel_ui/src"],
-      "common": ["../../packages/common/src"]
+      "pixel_ui": [
+        "../../packages/pixel_ui/src"
+      ],
+      "common": [
+        "../../packages/common/src"
+      ]
     },
     "noEmit": true
   },
@@ -40,8 +44,10 @@
     "**/*.tsx",
     "**/*.jsx",
     "**/*.js",
-    ".next/types/**/*.ts" ],
+    ".next/types/**/*.ts"
+  ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "extends": "expo/tsconfig.base"
 }
