--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,4 @@ node_modules/
 
 pnpm-lock.yaml
 
-.snfoundry_cache
+onchain/cairo/.snfoundry_cache/https___starknet_mainnet_public_blastapi_io_rpc_v0_7_615925_v3.json
