Feat: add liquidity (#229)
* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* wip

* update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ node_modules/
 
 
 pnpm-lock.yaml
+
+onchain/cairo/.snfoundry_cache/https___starknet_mainnet_public_blastapi_io_rpc_v0_7_615925_v3.json
