--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -56,7 +56,9 @@
     "@dynamic-labs/sdk-react-core": "^3.4.4",
     "@dynamic-labs/starknet": "^3.4.4",
     "@dynamic-labs/wagmi-connector": "^3.4.4",
-    "@argent/x-sessions": "^6.7.4"
+    "@argent/x-sessions": "^6.7.4",
+    "starknetkit-next": "npm:starknetkit@2.3.0"
+    
   },
   "devDependencies": {
     "@types/node": "^20",
