--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -57,7 +57,7 @@
     "@dynamic-labs/starknet": "^3.4.4",
     "@dynamic-labs/wagmi-connector": "^3.4.4",
     "@argent/x-sessions": "^6.7.4",
-    "starknetkit-next": "npm:starknetkit@2.3.3",
+    "starknetkit-next": "npm:starknetkit@2.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
