upgrade package + change + fix launchpad ui + pwa

--- a/turbo.json
+++ b/turbo.json
@@ -50,7 +50,8 @@
     "BACKEND_DATABASE_URL",
     "CLOUDINARY_CLOUD_NAME",
     "CLOUDINARY_API_KEY",
-    "CLOUDINARY_API_SECRET"
+    "CLOUDINARY_API_SECRET",
+    "BACKEND_URL"
 
   ],
   "pipeline": {
