--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -56,8 +56,9 @@
     "@reown/appkit-auth-wagmi-react-native": "1.0.1",
     "@reown/appkit-siwe-react-native": "1.0.1",
     "@reown/appkit-wagmi-react-native": "1.0.1",
-    "@starknet-react/chains": "^0.1.7",
-    "@starknet-react/core": "^2.8.2",
+    "@starknet-react/chains": "^3.1.0",
+    "@starknet-react/core": "^3.5.0",
+    "@starknet-react/kakarot": "^3.0.9",
     "@starknet-wc/core": "0.0.4",
     "@starknet-wc/react": "0.0.4",
     "@stripe/stripe-react-native": "0.38.6",
@@ -123,7 +124,7 @@
     "react-native-webrtc": "^124.0.4",
     "react-native-webview": "~13.6.4",
     "react-native-webview-crypto": "^0.0.25",
-    "starknet": "6.9.0",
+    "starknet": "6.11.0",
     "starknetkit": "^1.1.9",
     "text-encoding": "^0.7.0",
     "viem": "2.x",
