--- a/packages/pixel_ui/src/configs/backend.config.json
+++ b/packages/pixel_ui/src/configs/backend.config.json
@@ -9,6 +9,7 @@
     "mint_nft_devnet": "../tests/integration/local/mint_nft.sh"
   },
   "production": true,
+  "local":false,
   "websocket": {
     "read_buffer_size": 1024,
     "write_buffer_size": 1024
