--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -15,6 +15,8 @@
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@argent/tma-wallet": "^1.17.0",
+    "@argent/x-sessions": "^6.7.4",
     "@avnu/avnu-sdk": "^2.0.0",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/next-js": "^2.2.0",
@@ -47,13 +49,11 @@
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
     "starknet": "6.9.0",
+    "starknetkit-next": "npm:starknetkit@2.3.3",
     "viem": "~2.21.2",
     "wagmi": "^2.12.8",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2",
-    "@argent/x-sessions": "^6.7.4",
-    "starknetkit-next": "npm:starknetkit@2.3.3"
-    
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
