upgrade fastify and start twitter oauth basic

--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -27,3 +27,8 @@ STARKNET_RPC_PROVIDER_URL=""
 STARKNET_RPC_NETWORK="SN_SEPOLIA"  # SN_SEPOLIA, SN_MAIN
 RPC_NODE_API_KEY=""
 SN_NETWORK="SN_SEPOLIA"
+
+
+TWITTER_API_KEY=""
+TWITTER_API_SECRET_KEY=""
+TWITTER_CALLBACK_URL="TWITTER_CALLBACK_URL"
