--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -24,43 +24,46 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
+    "@fastify/cors": "^10.0.1",
+    "@fastify/oauth2": "8.1.0",
+    "@fastify/session": "^11.0.1",
     "@fastify/static": "7.0.4",
-    "@funkit/api-base": "^1.2.0",
-    "@prisma/client": "^5.18.0",
+    "@funkit/api-base": "^1.3.2",
+    "@prisma/client": "^5.22.0",
     "@telegraf/types": "^7.1.0",
     "apollo-server": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "fastify": "^4.28.1",
-    "fastify-plugin": "^4.5.1",
+    "fastify": "^5.1.0",
+    "fastify-plugin": "^5.0.1",
     "fastify-socket.io": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "graphql": "^16.9.0",
-    "helmet": "^7.1.0",
+    "helmet": "^7.2.0",
     "indexer-prisma": "workspace:*",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.15",
-    "pg": "^8.12.0",
-    "pg-promise": "^11.9.1",
-    "socket.io": "^4.8.0",
-    "stripe": "^17.2.1",
+    "nodemailer": "^6.9.16",
+    "pg": "^8.13.1",
+    "pg-promise": "^11.10.1",
+    "socket.io": "^4.8.1",
+    "stripe": "^17.3.1",
     "telegraf": "^4.16.3",
-    "twilio": "^5.3.3",
-    "typescript": "^5.5.4"
+    "twilio": "^5.3.5",
+    "twitter-api-v2": "^1.18.1",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.16.1",
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/node": "^20.17.6",
     "fastify": "^4.28.1",
-    "prisma": "^5.18.0",
+    "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "tsup": "^8.0.2",
-    "tsx": "^4.7.3",
+    "tsup": "^8.3.5",
+    "tsx": "^4.19.2",
     "typescript": "^5.5.4"
   }
 }
