--- a/turbo.json
+++ b/turbo.json
@@ -51,7 +51,10 @@
     "CLOUDINARY_CLOUD_NAME",
     "CLOUDINARY_API_KEY",
     "CLOUDINARY_API_SECRET",
-    "BACKEND_URL"
+    "BACKEND_URL",
+    "TWITTER_API_KEY",
+    "TWITTER_API_SECRET_KEY",
+    "TWITTER_CALLBACK_URL"
 
   ],
   "pipeline": {
