--- a/apps/pwa/.env.example
+++ b/apps/pwa/.env.example
@@ -3,7 +3,7 @@ ACCOUNT_PRIVATE_KEY="0x"
 
 PROVIDER_URL="https://starknet-sepolia.g.alchemy.com/starknet/version/rpc/v0_7/your_api_key"
 NETWORK_NAME="SN_SEPOLIA"  # SN_SEPOLIA, SN_MAIN
-
+NEXT_PUBLIC_TELEGRAM_BOT_URL="https://t.me/afk_aligned_dev_bot"
 PINATA_API_KEY="YOUR_PINATA_API_KEY"
 PINATA_SECRET_API_KEY="YOUR_PINATA_SECRET_API_KEY"
 IPFS_GATEWAY="https://ipfs.io/"
