--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -79,6 +79,7 @@
     "expo-auth-session": "^5.5.2",
     "expo-av": "~14.0.7",
     "expo-camera": "^15.0.16",
+    "expo-checkbox": "^4.0.0",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "^16.0.2",
     "expo-crypto": "~13.0.2",
