fix: live cleanup, added cloudfare storage and fix joining strean issue

--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -27,3 +27,13 @@ STARKNET_RPC_PROVIDER_URL=""
 STARKNET_RPC_NETWORK="SN_SEPOLIA"  # SN_SEPOLIA, SN_MAIN
 RPC_NODE_API_KEY=""
 SN_NETWORK="SN_SEPOLIA"
+
+
+# Cloudfare
+CLOUDFARE_ACCOUNT_ID=""
+CLOUDFARE_AUTH_TOKEN=""
+CLOUDFARE_R2_BUCKET=""
+CLOUDFARE_R2_ACCESS=""
+CLOUDFARE_R2_SECRET=""
+CLOUDFARE_R2_DOMAIN=""
+
