--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -24,6 +24,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.693.0",
+    "@aws-sdk/lib-storage": "^3.693.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/static": "7.0.4",
     "@funkit/api-base": "^1.2.0",
@@ -52,8 +54,8 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/express": "^4.17.21",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^20.16.1",
     "fastify": "^4.28.1",
     "prisma": "^5.18.0",
