star fix launch + redeploy + indexer + integration

--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -6,7 +6,7 @@ EXPO_PUBLIC_BACKEND_URL="http://localhost:3000/api"
 EXPO_PUBLIC_WC_ID=""
 EXPO_NODE_ENV="development"
 EXPO_PUBLIC_NODE_ENV="development"
-EXPO_PUBLIC_INDEXER_BACKEND_URL=""
+EXPO_PUBLIC_INDEXER_BACKEND_URL="https://data-backend-production-7626.up.railway.app"
 EXPO_PUBLIC_PIXEL_URL="http://localhost:3000/pixel"
 
 
@@ -24,6 +24,7 @@ EXPO_PUBLIC_LAYERSWAP_API_KEY="API_KEY_LAYER_SWAP"
 
 EXPO_PUBLIC_GOOGLE_TAG_ID=
 
+EXPO_PUBLIC_BACKEND_URL="https://data-backend-production-7626.up.railway.app"
 
 # EKUBU API
 EXPO_PUBLIC_EKUBO_API="https://mainnet-api.ekubo.org"
