--- a/scripts/package.json
+++ b/scripts/package.json
@@ -11,6 +11,7 @@
     "deploy:namespace": "ts-node ./deploy/namespace.ts",
     "deploy:launchpad": "ts-node ./deploy/launchpad.ts",
     "deploy:token": "ts-node ./deploy/token.ts",
+    "deploy:memecoin": "ts-node ./deploy/memecoin.ts",
     "deploy:art_peace": "ts-node ./deploy/art_peace.ts",
     "deploy:username_store": "ts-node ./deploy/username_store.ts",
     "dev": "ts-node index.ts",
