--- a/Dockerfile.data-backend.railway
+++ b/Dockerfile.data-backend.railway
@@ -21,6 +21,13 @@ ARG JWT_SECRET
 ARG ACCESS_TOKEN_EXPIRY
 ARG REFRESH_TOKEN_EXPIRY
 
+ARG CLOUDFARE_ACCOUNT_ID
+ARG CLOUDFARE_AUTH_TOKEN
+ARG CLOUDFARE_R2_BUCKET
+ARG CLOUDFARE_R2_ACCESS
+ARG CLOUDFARE_R2_SECRET
+ARG CLOUDFARE_R2_DOMAIN
+
 RUN echo ${TELEGRAM_BOT_TOKEN}
 RUN echo $INDEXER_DATABASE_URL
 RUN echo ${BACKEND_DATABASE_URL}
@@ -35,6 +42,13 @@ RUN echo ${RPC_NODE_API_KEY}
 RUN echo ${JWT_SECRET}
 RUN echo ${ACCESS_TOKEN_EXPIRY}
 RUN echo ${REFRESH_TOKEN_EXPIRY}
+
+RUN echo ${CLOUDFARE_ACCOUNT_ID}
+RUN echo ${CLOUDFARE_AUTH_TOKEN}
+RUN echo ${CLOUDFARE_R2_BUCKET}
+RUN echo ${CLOUDFARE_R2_ACCESS}
+RUN echo ${CLOUDFARE_R2_SECRET}
+RUN echo ${CLOUDFARE_R2_DOMAIN}
 
 ARG TELEGRAM_WEB_APP
 RUN echo ${TELEGRAM_WEB_APP}
